test/errors/python_error/zs/package_symbols/structure_with_structure_clash_error.zs
package package_symbols.structure_with_structure_clash_error;

struct SOME_GOOD_NAME
{
    uint32 field;
};

struct Some_Good_Name
{
    uint32 field;
};
